sjeng/use_undefined_identifier/c1/is_attacked
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/is_attacked/src/attacks.c:655:7: error: use of undeclared identifier 'setup_attackers_bishop_o'
v10 = setup_attackers_bishop_o[v9]; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/is_attacked/src/attacks.c:680:54: error: use of undeclared identifier 'jpt_401814'
while ( board[square + ( __int64)*( int *)( ( char *)jpt_401814 + v14)] != 3 ) 
                                                     ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/is_attacked/src/attacks.c:688:7: error: use of undeclared identifier 'setup_attackers_rook_o'
v16 = setup_attackers_rook_o[v15]; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/is_attacked/src/attacks.c:714:6: error: use of undeclared identifier 'setup_attackers_bishop_o'
v3 = setup_attackers_bishop_o[v2]; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/is_attacked/src/attacks.c:726:54: error: use of undeclared identifier 'jpt_401814'
while ( board[square + ( __int64)*( int *)( ( char *)jpt_401814 + v7)] != 4 ) 
                                                     ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/is_attacked/src/attacks.c:734:7: error: use of undeclared identifier 'setup_attackers_rook_o'
v21 = setup_attackers_rook_o[v8]; 
      ^
6 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/is_attacked/src/obj/attacks.o] Error 1
